# AAI-590-Capstone

./: .gitignore  README.md  assistant,py  assistant.py  collect_face_data.py  detect_and_classify.py  intent_classifier_clinc  intent_label_classes.npy  setup.sh  temp_wrapper.html
app/: README.md  key.ts  start_linux.sh  start_windows.ps1
app/api/: face_classifier.py  main.py  models.py  requirements.txt
app/api/assistant-mcp-server/: README.md  pyproject.toml
app/api/assistant-mcp-server/src/assistant_mcp/: __init__.py  intent_classifier.py  server.py  vocab.pkl
app/api/assistant-mcp-server/src/assistant_mcp/services/: __init__.py  alarm.py  calendar.py  media.py  phone.py  shopping.py  smart_home.py
app/ui/app/: package-lock.json  package.json
app/ui/app/src/: App.css  App.tsx  index.css
app/ui/app/src/pages/: ChatbotPage.tsx  LandingPage.tsx  client.ts
app/ui/app/src/services/: mockApi.ts
facial recognition/: CNN_Classifier.ipynb  collect_face_data.py  detect_and_classify.py
intent classifiers/: IntentClassifierEDA.ipynb  IntentClassifier_Alexis.ipynb  IntentClassifier_Pallav.ipynb
